--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk
-        sudo apt install -y libncurses5 libffi-dev libssl-dev libsqlite3-dev
+        sudo apt install -y libncurses5-dev libffi-dev libssl-dev libsqlite3-dev
         pip install --upgrade pip
         pip install buildozer cython
 
