--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,34 +17,41 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install buildozer dependencies
+    - name: Install build tools and dependencies
       run: |
         sudo apt update
-        sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk
-        sudo apt install -y libncurses5-dev libffi-dev libssl-dev libsqlite3-dev
+        sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk libffi-dev libssl-dev libsqlite3-dev
+
+    - name: Download Android SDK cmdline-tools
+      run: |
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        cd $HOME/android-sdk/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        mv cmdline-tools latest
+        rm cmdline-tools.zip
+
+    - name: Set ANDROID_HOME environment variable
+      run: echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+
+    - name: Accept Android SDK licenses and install SDK packages
+      run: |
+        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;31.0.0"
+
+    - name: Install Python packages
+      run: |
         pip install --upgrade pip
         pip install buildozer cython
 
-    - name: List Android SDK dirs for debug
-      run: |
-        ls -l $HOME/.buildozer/android/platform/android-sdk/
-        ls -l $HOME/.buildozer/android/platform/android-sdk/tools/bin/
-        ls -l $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/
-        ls -l $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/tools/bin/
-
-    - name: Accept Android SDK licenses
-      run: |
-        yes | $HOME/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager --licenses || \
-        yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/tools/bin/sdkmanager --licenses || \
-        yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-
-
     - name: Build APK
+      env:
+        ANDROID_HOME: ${{ env.ANDROID_HOME }}
+        PATH: ${{ env.ANDROID_HOME }}/platform-tools:${{ env.ANDROID_HOME }}/cmdline-tools/latest/bin:$PATH
       run: |
-        buildozer init
         buildozer android debug
 
-    - name: Upload APK
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
         name: kivy-apk
