--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,16 +35,25 @@ jobs:
       run: echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
 
     - name: Accept Android SDK licenses and install SDK packages
+      env:
+        ANDROID_HOME: ${{ env.ANDROID_HOME }}
+        PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/bin:$PATH
       run: |
-        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;31.0.0"
+        yes | sdkmanager --licenses
+        yes | sdkmanager "platform-tools" "platforms;android-31" "build-tools;31.0.0"
 
     - name: Install Python packages
       run: |
         pip install --upgrade pip
         pip install buildozer cython
 
-    - name: Build APK
+    - name: Create buildozer.spec if not exists
+      run: |
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
+        fi
+
+    - name: Build APK with Buildozer
       env:
         ANDROID_HOME: ${{ env.ANDROID_HOME }}
         PATH: ${{ env.ANDROID_HOME }}/platform-tools:${{ env.ANDROID_HOME }}/cmdline-tools/latest/bin:$PATH
