--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Install build tools and dependencies
       run: |
         sudo apt update
-        sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk libffi-dev libssl-dev libsqlite3-dev
+        sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk libffi-dev libssl-dev libsqlite3-dev coreutils
+        sudo ln -sf /bin/bash /bin/sh
 
     - name: Download Android SDK cmdline-tools
       run: |
